RESOLVED FIXED53799
WebKit2: Crash in WebPageProxy::setPendingAPIRequestURL after web process crashed
https://bugs.webkit.org/show_bug.cgi?id=53799
Summary WebKit2: Crash in WebPageProxy::setPendingAPIRequestURL after web process cra...
Maciej Stachowiak
Reported 2011-02-04 12:27:28 PST
WebKit2: Crash in WebPageProxy::setPendingAPIRequestURL after web process crashed
Attachments
Patch (1.25 KB, patch)
2011-02-04 12:36 PST, Maciej Stachowiak
andersca: review+
Maciej Stachowiak
Comment 1 2011-02-04 12:36:48 PST
Maciej Stachowiak
Comment 2 2011-02-04 12:47:12 PST
Note You need to log in before you can comment on or make changes to this bug.