2011-02-04  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Anders Carlsson.

        WebKit2: Crash in WebPageProxy::setPendingAPIRequestURL after web process crashed
        https://bugs.webkit.org/show_bug.cgi?id=53799
        <rdar://problem/8943956>

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::reload):


Canonical link: https://commits.webkit.org/67730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77659 268f45cc-cd09-0410-ab3c-d52691b4dbfc